--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,11 +1,10 @@
 Changelog
 =========
 
-1.1 (unreleased)
-----------------
+1.0.1 (2011-03-02)
+------------------
 
-- Nothing changed yet.
-
+- Adding vocabularies to the egg
 
 1.0 (2011-03-01)
 ----------------
