Preparing for release
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.policy/trunk@7931 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,11 +1,11 @@
 Changelog
 =========
 
-1.0.2 (unreleased)
+1.0.2 (2011-03-21)
 ------------------
 
-- Nothing changed yet.
-
+- Fix for unicode error in newsletter. Also added missing newline
+  (reinhardt)
 
 1.0.1 (2011-03-02)
 ------------------
