--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,13 @@
 Changelog
 =========
 
-2.1 (unreleased)
+2.1 (2011-12-05)
 ----------------
 
-- Nothing changed yet.
+- Fixing package to work with fullrelease [deroiste]
+- encode collective.solr search_pattern, fixes some
+  UnicodeDecodeErrors from search_rss [reinhardt]
+- Handle case where language was not identified correctly [gerken]
 
 
 2.0 (2011-11-08)
