--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 2.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added more logging and commits between each imported article
+  for sehepunkte
 
 
 2.3 (2012-03-04)
