--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 2.5 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Stop querying opac, trying to use sparql (beta mode)
+  [gerken]
 
 
 2.4 (2012-05-29)
