--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,13 @@
 Changelog
 =========
 
-2.5 (unreleased)
+2.6 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
+2.5 (2012-06-19)
 ----------------
 
 - Stop querying opac, trying to use sparql (beta mode)
