--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.5.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.5.1 (2012-06-19)
 ------------------
 
