--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.5.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.5.5 (2012-08-14)
 ------------------
 
