--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,11 @@
 Changelog
 =========
 
-2.5.6 (unreleased)
+2.5.6 (2012-08-14)
 ------------------
 
-- Nothing changed yet.
+- Bugfix for plone.app.async.
+  [gerken]
 
 
 2.5.5 (2012-08-14)
