--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 2.5.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- total_seconds is not available in python 2.6
+  [gerken]
 
 
 2.5.6 (2012-08-14)
