--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 2.5.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Uprade step to handle removal of image fields
+  [gerken]
 
 
 2.5.7 (2012-08-14)
