--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.5.10 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.5.9.5 (2012-09-10)
 --------------------
 
