--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.5.11 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 2.5.10 (2013-01-23)
 -------------------
 
