--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Changelog
 4.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed path depth, refs #13615 [reinhardt]
+- Free memory after every issue and volume, refs #13615 [reinhardt]
+- Syndication fix for Plone 4.3, refs #11785 #13624 [reinhardt]
 
 
 4.0.0 (2016-04-25)
