--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,8 @@ Changelog
 - Upgraded to collective.solr 4.0, refs #14362 [reinhardt]
 - Changed fields of MissingBVIDExporter, refs #14156
   [reinhardt]
+- Added bvid-update view, refs #14156
+  [reinhardt]
 
 
 4.0.4 (2016-10-20)
