Use canonical_uri in BVID export if activated, refs #14156

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,12 @@ Changelog
 4.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Changed fields of MissingBVIDExporter, refs #14156
+  [reinhardt]
+- Added bvid-update view, refs #14156
+  [reinhardt]
+- Use canonical_uri in BVID export if activated, refs #14156
+  [reinhardt]
 
 
 4.0.5 (2016-11-29)
@@ -13,10 +18,6 @@ Changelog
 - Handle volumes as well as issues in ChroniconExporter, refs #14262
   [reinhardt]
 - Upgraded to collective.solr 4.0, refs #14362 [reinhardt]
-- Changed fields of MissingBVIDExporter, refs #14156
-  [reinhardt]
-- Added bvid-update view, refs #14156
-  [reinhardt]
 
 
 4.0.4 (2016-10-20)
