--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 4.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Require specific custom version of collective.solr
+  [reinhardt]
 
 
 4.1.1 (2017-01-27)
