--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 4.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- bvid-update: More robust conditions. Refs #14156
+  [reinhardt]
 
 
 4.1.2 (2017-01-27)
