Allow running export after 6 days. Time between end of export and start of next export is always less than 7 days. Refs #15191

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Changelog
 4.3.0 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow running export after 6 days. Time between end of export and start of
+  next export is always less than 7 days. Refs #15191
+  [reinhardt]
 
 
 4.2.0 (2017-03-30)
