Export: Pass context to items(). Without this it retrieves all reviews, not only the current Volume/Issue. Fixes MemoryError. Refs #15689

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 4.3.0 (unreleased)
 ------------------
 
+- Export: Fixed MemoryError. Refs #15689
+  [reinhardt]
 - Dynamic portal title in comments viewlet. Refs #15699
   [reinhardt]
 
