--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 4.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Upgraded to dara schema 4.0. Refs #16169
+  [reinhardt]
 
 
 4.3.1 (2017-11-16)
