--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 4.3.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Include subtitle in titleOrShortname index. Refs #REC-981
 
 
 4.3.4 (2018-05-25)
