--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changelog
 ------------------
 
 - Include subtitle in titleOrShortname index. Refs #REC-981
+- Registration: Added reference to data protection statement. #REC-991
 
 
 4.3.4 (2018-05-25)
