--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ Changelog
 - Updated Footer. #FLOW-434
 - RSS: Limit search results to maximum number of items we're returning.
   #FLOW-198
+- Support for multipart titles. #FLOW-520
 
 
 4.3.5 (2018-12-12)
