--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ Changelog
 - Updated Footer. #FLOW-434
 - RSS: Limit search results to maximum number of items we're returning.
   #FLOW-198
+- Social Media Buttons: Moved to their own viewlet and updated markup. #FLOW-439
 
 
 4.3.5 (2018-12-12)
