--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 4.6.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- New link to accessibility. #HELP-2413
 
 
 4.6.0 (2020-07-20)
