--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 4.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Hide commenting functionality, only show existing comments. #HELP-2761
 
 
 4.6.1 (2020-10-06)
