--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 4.8.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Uninstall artium if installed. #HELP-4596
 
 
 4.8.1 (2021-11-25)
