--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 4.8.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Export: Fix for missing reviews. #HELP-5866
 
 
 4.8.2 (2022-08-02)
